fix: align Size, Status, and Actions columns on the images page
Size is now right-aligned so numbers line up, Status and Actions are
centred so badges and buttons sit under their headers.

--- a/internal/web/static/style.css
+++ b/internal/web/static/style.css
@@ -2006,6 +2006,7 @@ table.managing .td-checkbox {
 .cell-image-size,
 .table-images .th-size {
   width: 10%;
+  text-align: right;
 }
 .table-images .th-created,
 .table-images td:nth-last-child(3) {
@@ -2014,10 +2015,12 @@ table.managing .td-checkbox {
 .table-images .th-status,
 .table-images td:nth-last-child(2) {
   width: 10%;
+  text-align: center;
 }
 .table-images .th-actions,
 .table-images td:last-child {
   width: 10%;
+  text-align: center;
 }
 .table-images .th-select {
   width: 40px;
